add templates with partials

--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,7 +1,5 @@
-doctype html
-html(lang="ko")
-    head 
-        title BLOOS
-    body 
-        h1 Edit Video
-    include partials/footer.pug
+extends base.pug
+
+
+block content 
+    h1 Edit Video
