--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,4 @@
-doctype html
-html(lang="ko")
-    head 
-        title BLOOS
-    body 
-        h1 Watch Video
-    include partials/footer.pug
+extends base.pug
+
+block content 
+    h1 Watch
