--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -1,9 +1,9 @@
 extends base.pug
 
 block content 
-    h4 Change Title of video
+    h4 Update Video
     form(method="POST")
         input(name="title", placeholder="Video Title", value=video.title, required)
-        input(placeholder="Description", required, type="text", name="description", minlength=10, value=video.description)
+        input(placeholder="Description", required, type="text", name="description", minlength=1, value=video.description)
         input(placeholder="Hashtags, separated by commas without spaces", required, type="text", name="hashtags", value=video.hashtags.join())
         input(value="Save", type="submit")
