--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -7,15 +7,21 @@ html(lang="ko")
         header 
             h1=pageTitle
             nav
-                ul 
-                    li 
+                ul
+                    li
+                        a(href="/") Home
+                    if loggedIn
+                        li
+                            a(href="/logout") Log Out
+                    else
+                        li
+                            a(href="/join") Join
+                        li
+                            a(href="/login") Login
+                    li
+                        a(href="/search") Search
+                    li
                         a(href="/videos/upload") Upload Video 
-                    li 
-                        a(href="/") Home 
-                    li 
-                        a(href="/search") Search 
-                    li 
-                        a(href="/join") Join
         main
             block content
     include partials/footer.pug
