session connection, add .env

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -13,6 +13,8 @@ html(lang="ko")
                     if loggedIn
                         li
                             a(href="/logout") Log Out
+                        li 
+                            a(href="/my-profile") #{loggedInUser.name}의 Profile
                     else
                         li
                             a(href="/join") Join
