github access_token

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,8 +8,8 @@ block content
         input(placeholder="Password", name="password", type="password", required)
         input(type="submit", value="Login")
         br
-        a(href="https://github.com/login/oauth/authorize?client_id=4740271bc74a812a150e&allow_signup=false") Continue with GitHub &rarr;
+        a(href="/users/github/start") Continue with GitHub &rarr;
     hr
-    div    
+    div
         span Don't have an account? 
         a(href="/join") Create now &rarr;
