--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="ko")
     head 
-        title #{pageTitle} | BLOOS
+        title #{pageTitle} | #{siteName}
         link(rel="stylesheet" href="https://unpkg.com/mvp.css")
     body 
         header 
@@ -11,10 +11,10 @@ html(lang="ko")
                     li
                         a(href="/") Home
                     if loggedIn
-                        li
-                            a(href="/logout") Log Out
                         li 
-                            a(href="/my-profile") #{loggedInUser.name}의 Profile
+                            a(href="/users/edit") Edit Profile 
+                        li
+                            a(href="/users/logout") Log Out
                     else
                         li
                             a(href="/join") Join
