--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,5 +1,20 @@
-@import "./_variables";
+// config
+@import "./config/_variables.scss";
+@import "./config/_reset.scss";
+
+// components
+@import "./components/header.scss";
+
+// screens
+
+// Defaults
+a {
+  color: inherit;
+  text-decoration: none;
+}
 body {
-  background-color: $red;
-  color: $blue;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: $main;
+  color: white;
 }
