add basic stylesheets

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,8 +2,9 @@ extends base.pug
 include mixins/video
 
 block content 
-    each video in videos
-        +video(video)
-    else
-        li Sorry, nothing found 🙁
+    div.video-grid
+        each video in videos
+            +video(video)
+        else
+            span.empty_message No videos found
         
