--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -2,7 +2,11 @@ extends ../base.pug
 include ../mixins/video
 
 block content 
-    each video in user.videos 
-        +video(video)
-    else 
-        li Sorry, nothing found 🙁
+    div.profile__data
+        img(src="/" + user.avatarUrl).avatar
+        h3=user.name
+    div.video-grid
+        each video in user.videos 
+            +video(video)
+        else
+            span.empty_message No videos found
