--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -225,7 +225,7 @@ form {
   border: 1px solid rgba(89, 151, 255, 0.5);
 }
 
-input {
+input:not(input[type=range]) {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
@@ -236,7 +236,7 @@ input {
   color: white;
   width: 90%;
 }
-input::placeholder {
+input:not(input[type=range])::placeholder {
   color: rgba(255, 255, 255, 0.7);
 }
 
