--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -6,7 +6,7 @@ form {
   border-radius: 10px;
   border: 1px solid rgba($color: $main-b, $alpha: 0.5);
 }
-input {
+input:not(input[type="range"]) {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
