--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -225,7 +225,8 @@ form {
   border: 1px solid rgba(89, 151, 255, 0.5);
 }
 
-input:not(input[type=range]) {
+input:not(input[type=range]),
+input[type=submit] {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
@@ -236,7 +237,8 @@ input:not(input[type=range]) {
   color: white;
   width: 90%;
 }
-input:not(input[type=range])::placeholder {
+input:not(input[type=range])::placeholder,
+input[type=submit]::placeholder {
   color: rgba(255, 255, 255, 0.7);
 }
 
@@ -244,11 +246,21 @@ input[type=submit],
 .social__btn {
   border-radius: 5px;
   padding: 12px 20px;
-  color: white;
-  background-color: #5997ff;
-  text-align: center;
+  background-color: white !important;
+  color: red !important;
+  text-align: center !important;
   cursor: pointer;
   display: block;
+  border: none;
+}
+input[type=submit]:focus,
+.social__btn:focus {
+  outline: none;
+}
+input[type=submit]:disabled,
+.social__btn:disabled {
+  opacity: 0.5;
+  pointer-events: none;
 }
 
 .social-login {
@@ -372,6 +384,20 @@ input[type=submit],
   text-decoration: none;
 }
 
+.upload__container {
+  width: 100%;
+}
+.upload__container .upload__video {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.upload__container .upload__video video {
+  max-width: 100%;
+  margin-bottom: 10px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -388,4 +414,32 @@ main {
   width: 100%;
   margin: 0 auto;
   margin-top: 50px;
+}
+
+@keyframes goAway {
+  from {
+    transform: none;
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+}
+.message {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 200px;
+  padding: 10px 20px;
+  border-radius: 10000px;
+  text-align: center;
+  animation: goAway 0.5s ease-in-out forwards;
+  animation-delay: 3s;
+}
+.message.error {
+  background-color: tomato;
+  color: white;
 }
