--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -6,7 +6,8 @@ form {
   border-radius: 10px;
   border: 1px solid rgba($color: $main-b, $alpha: 0.5);
 }
-input:not(input[type="range"]) {
+input:not(input[type="range"]),
+input[type="submit"] {
   all: unset;
   padding: 15px 20px;
   border-radius: 5px;
@@ -25,9 +26,17 @@ input[type="submit"],
 .social__btn {
   border-radius: 5px;
   padding: 12px 20px;
-  color: white;
-  background-color: $main-b;
-  text-align: center;
+  background-color: white !important;
+  color: rgba($color: red, $alpha: 1) !important;
+  text-align: center !important;
   cursor: pointer;
   display: block;
+  border: none;
+  &:focus {
+    outline: none;
+  }
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
